# poetry_git_with_local_package

./: .gitmodules  pyproject.toml  setup.py
local_package/: pyproject.toml
remote_package/: pyproject.toml
subdir_package/: pyproject.toml
subdir_package/subdir_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
use_wheel/: pyproject.toml
