[tool.poetry]
name = "remote_package"
version = "0.1.0"
description = ""
authors = ["ota42y <ota42y@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ota42y_python_package_test = {git = "https://github.com/ota42y/ota42y_python_package_test.git", rev = "0a6420ecb6500b60f9f8d560d17fd8a1be8ba083"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
