[tool.poetry]
name = "subdir_package"
version = "0.1.0"
description = ""
authors = ["ota42y"]
license = "MIT"
homepage = "https://ota42y"

[tool.poetry.dependencies]
python = "^3.8"
absl-py = {git = "https://github.com/abseil/abseil-py.git", rev = "c99edd8e3dffe3667a9f086db86aa259927ac429"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
